# Cody

./: CMakeLists.txt  server.config  steps.txt
include/: client.h  fsmParser.h  http.h  master.h  worker.h
src/: fsmParser.c  main.c  master.c  worker.c
testing/go_testing/: go.mod  main.go
